crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/unexpected_terminal/semicolon/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Unexpected Semicolon. One of AddressKeyword, Bang, BoolKeyword, BytesKeyword, DecimalLiteral, DeleteKeyword, FalseKeyword, FixedKeyword, HexLiteral, HexStringLiteral, Identifier, IntKeyword, Minus, MinusMinus, NewKeyword, OpenBracket, OpenParen, PayableKeyword, PlusPlus, StringKeyword, StringLiteral, SuperKeyword, ThisKeyword, Tilde, TrueKeyword, TypeKeyword, UfixedKeyword, UintKeyword, UnicodeStringLiteral was expected
   ╭─[input.sol:4:25]
   │
 4 │ contract Foo { uint x = ; }
   │                         ┬  
   │                         ╰── Error occurred here.
───╯
